# pdfscribe2ds-fastapi

./: README.md  app.py  pyproject.toml
api/: main.py  routes.py  schemas.py
caption_pipeline/: caption_pipeline.py
ocr_pipeline/: pipeline.py
service/: model_manager.py  pipeline.py  settings.py  workers.py
