[project]
name = "pdfscribe2ds"
version = "1.1.0"
description = "A tool to convert PDF documents into structured data formats. (FastAPI version)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image>=1.17.0",
    "rich>=13.0.0",
    "pillow>=12.0.0",
    "fastapi>=0.121.0",
    "pydantic-settings>=2.11.0",
]
